--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node ./src/app.js",
-    "test": "npx jest -i --colors"
+    "test": "npx jest -i --colors",
+    "dev": "nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "jest": "^27.4.7",
     "joi": "^17.6.0",
     "mongodb": "^4.7.0",
+    "nodemon": "^2.0.19",
     "uuid": "^8.3.2"
   },
   "description": ""
