--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.1",
     "jest": "^27.4.7",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
     "nodemon": "^2.0.19",
     "uuid": "^8.3.2"
