--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node ./src/app.js",
-    "test": "npx jest -i --colors",
-    "dev": "nodemon ./src/server.js"
+    "test": "npx jest -i --colors"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +23,5 @@
     "mongodb": "^4.7.0",
     "nodemon": "^2.0.19",
     "uuid": "^8.3.2"
-  },
-  "description": ""
+  }
 }
