--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "1.0.0",
   "main": "src/app.js",
   "scripts": {
-    "start": "node ./src/server.js",
-    "test": "npx jest -i --colors"
+    "start": "node ./src/server.js"
   },
   "keywords": [],
   "author": "",
