--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "dayjs": "^1.11.3",
     "dotenv": "^14.3.2",
     "express": "^4.18.1",
-    "jest": "^27.4.7",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.7.0",
-    "uuid": "^8.3.2"
+    "mongodb": "^4.7.0"
   }
 }
