--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "oscar-niemeyer",
-  "type": "module",
+  "name": "projeto14-alidriven-back",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./src/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marcus-souza-soares/projeto14-alidriven-back.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/marcus-souza-soares/projeto14-alidriven-back/issues"
+  },
+  "homepage": "https://github.com/marcus-souza-soares/projeto14-alidriven-back#readme",
   "dependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.3",
-    "dotenv": "^14.3.2",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.7.0"
+    "mongodb": "^4.8.0",
+    "uuid": "^8.3.2"
   }
 }
